# bayarcash-rs

./: Cargo.toml  LICENSE  README.md
docs/plans/: 2026-02-25-cli-mcp-design.md  2026-02-25-cli-mcp-implementation.md
examples/: basic_usage.rs
src/: app_config.rs  checksum.rs  client.rs  config.rs  error.rs  http.rs  lib.rs  verification.rs
src/types/: bank.rs  callback.rs  direct_debit.rs  manual_transfer.rs  mod.rs  payment.rs  portal.rs  transaction.rs
tests/: checksum_test.rs  client_test.rs  verification_test.rs
