[package]
name = "bayarcash-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Bayarcash Payment Gateway API"
license = "MIT"
repository = "https://github.com/qhkm/bayarcash-rust-sdk"
homepage = "https://github.com/qhkm/bayarcash-rust-sdk"
keywords = ["bayarcash", "payment", "fpx", "duitnow", "malaysia"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
urlencoding = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
url = "2"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["full", "test-util"] }
